--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,22 @@
-name: Java CI/CD
+name: Java Workflow
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
-
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout código
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Configurar JDK 21
-      uses: actions/setup-java@v2
-      with:
-        java-version: 21
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: 20
 
-    - name: Compilar
-      run: mvn compile
-
-
-    - name: Testar
-      run: mvn test
+      - name: Run application
+        run: java -version
