--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: ignore
 
       - name: Build application
-        run: mvn clean install
+        run: ./gradlew build
+
