--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,23 @@
-name: Continuos Integration
 
-on: pull_request
+
+name: main
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  continuos-integration:
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Using Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.
-      - name: run install, build and test
-        run: |
-          npm install
-          npm run build
-          npm run test
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: main
