--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-
-
 name: main
 
 on:
@@ -21,3 +19,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: main
+    - name: Setup Maven
+      uses: actions/setup-maven@v3
+    - name: Build application
+      run: mvn clean install
+
