--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+repositories:
+  - https://github.com/actions/setup-maven
+
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
