--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: main
+nname: main
 
 on:
   push:
@@ -21,10 +21,9 @@ jobs:
         cache: main
 
     - name: Setup Maven
-      run: |
-        sudo apt update
-        sudo apt install maven
+      run: sudo apt update
+      run: sudo apt install maven
 
     - name: Build application
-      run: |
-        mvn clean install
+      run: mvn clean install
+
